Fix top alignment of split blocks [WEB-1799]

--- a/frontend/scss/molecules/_m-split-block.scss
+++ b/frontend/scss/molecules/_m-split-block.scss
@@ -26,10 +26,6 @@
       margin-right: 8px;
     }
 
-    &:first-child.o-blocks {
-      margin-top: 16px;
-    }
-
   }
 
 }
